@@ -5,8 +5,8 @@ Version: 0.2-0
 Date: 2010-02-28
 Author: HUANG Ronggui
 Maintainer: HUANG Ronggui <ronggui.huang@gmail.com>
-Depends: R (>= 2.8.0), DBI, RSQLite, gWidgets (>= 0.0-31), gWidgetsRGtk2 (>= 0.0-36), igraph
-Imports: RGtk2 (>= 2.12.12), methods
+Depends: R (>= 2.8.0), DBI, RSQLite, gWidgets (>= 0.0-31), gWidgetsRGtk2 (>= 0.0-36)
+Imports: RGtk2 (>= 2.12.12), methods, igraph
 Suggests: vcd, tcltk
 Description: R package for Qualitative Data Analysis. Current version only supports plain text.
 License: BSD
