@@ -573,3 +573,17 @@ filesByCodes <- function(codingTable=c("coding","coding2")){
   }
   ansWide
 }
+
+
+## use cam name conventions; duplicated the original functions for smooth transition.
+## must in ultis.R
+crossCodes <- CrossCode
+crossTwoCodes <- CrossTwo
+exportCodings <- ExportCoding
+getCaseNames <- GetCaseName
+getCaseIds <- GetCaseId
+getCodingTable <- GetCodingTable
+queryFiles <- QueryFile
+getFileNames <- GetFileName
+getFileIds <- GetFileId
+getFileIdSets <- GetFileIdSets
