@@ -126,7 +126,7 @@ div.vignettes a:hover {
 <p>HUANG Ronggui (2010). RQDA: R-based Qualitative Data Analysis. R package version 0.1-9. http://rqda.r-forge.r-project.org/
 
 <h1>What's new in the latest version?</h1>
-<p>RQDA 0.1-9 is now on <A href ="http://cran.r-project.org/web/packages/RQDA/index.html" target="_blank">CRAN</a> (2010-02-28).
+<p>RQDA 0.1-9 is now on <A href ="http://cran.r-project.org/web/packages/RQDA/index.html" target="_blank">CRAN</a> (2010-02-28). There is a bug, and the solution is <A HREF='http://lists.r-forge.r-project.org/pipermail/rqda-help/2010-March/000036.html'>here</A>.
 <p>RQDA 0.1-8 is now on <A href ="http://cran.r-project.org/src/contrib/Archive/RQDA/" target="_blank">CRAN</a> (2009-09-20).
 <p>RQDA 0.1-7 is now on <A href ="http://cran.r-project.org/src/contrib/Archive/RQDA/" target="_blank">CRAN</a> (2009-04-28).
 <p>RQDA 0.1-6 is now on <A href ="http://cran.r-project.org/src/contrib/Archive/RQDA/" target="_blank">CRAN</a> (2008-12-30).
